force-app/main/default/objects/Line_of_Business__c/Line_of_Business__c.object-meta.xml
<CustomObject>
    <label>Line of Business</label>
    <nameField>
        <label>Line of Business Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Line of Businesses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>