force-app/main/default/objects/Line_of_Business__c/fields/PIMS__c.field-meta.xml
<CustomField>
    <fullName>PIMS__c</fullName>
    <label>PIMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Avimark</fullName>
            </value>
            <value>
                <fullName>Impromed</fullName>
            </value>
            <value>
                <fullName>Rapport</fullName>
            </value>
            <value>
                <fullName>Robovet</fullName>
            </value>
            <value>
                <fullName>RxWorks</fullName>
            </value>
            <value>
                <fullName>VisionVPM</fullName>
            </value>
            <value>
                <fullName>Viva</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>