force-app/main/default/objects/Line_of_Business__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
                <isActive>false</isActive>
                <label>USA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>