force-app/main/default/objects/Line_of_Business__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>PIMS__c</columns>
    <columns>Region__c</columns>
    <columns>Line_of_Business__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>